[tool.poetry]
name = "my-be-architecture"
version = "0.1.0"
description = "My BE architecture sample"
authors = ["Seonghyeon Kim <self@seonghyeon.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
